<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:paddingBottom="@dimen/viewHeight"
    tools:context=".fragments.History">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/today"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/spacing_medium"
            android:layout_weight="1"
            card_view:cardCornerRadius="@dimen/spacing_medium"
            card_view:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/label_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/today"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/label_1"
                    android:scrollbars="vertical" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/previous"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/today"
            android:layout_margin="@dimen/spacing_medium"
            android:layout_weight="1"
            card_view:cardCornerRadius="@dimen/spacing_medium"
            card_view:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/label_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/previous"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_prev"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/label_2"
                    android:scrollbars="vertical" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_history"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        android:visibility="gone" />

</RelativeLayout>